--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
 <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
 {% endblock %}
 
+{% block apidoc_query %}?fen={{ fen|urlencode }}{% endblock %}
+
 {% block leftside %}
   <h1><a href="/">Syzygy endgame tablebases</a></h1>
 
