--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
       <div class="input-group">
         <input id="fen" type="text" name="fen" value="{{ fen_input }}" class="form-control" aria-label="FEN" placeholder="{{ DEFAULT_FEN }}">
         <span class="input-group-btn">
-          <input id="btn-set-fen" type="submit" class="btn btn-default" value="Set FEN">
+          <input type="submit" class="btn btn-default" value="Set FEN">
         </span>
       </div>
     </form>
