Set title according to material

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}{{ material }} – Syzygy endgame tablebases{% endblock %}
+
 {% block head %}
 <script src="/static/js/client.min.js"></script>
 <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
