--- a/templates/legal.html
+++ b/templates/legal.html
@@ -25,11 +25,10 @@
   <section id="imprint">
     <h2>Imprint</h2>
 
-    <p><em>German law demands this.</em></p>
-
     <p>Niklas Fiekas
       <br>Reichenberger Straße 3
       <br>38678 Clausthal-Zellerfeld
+      <br>Germany
     </p>
   </section>
 
@@ -52,7 +51,7 @@
   <section id="thanks">
     <h2>Software licenses</h2>
 
-    <p>This website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
+    <p>The code for the website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
 
     <ul>
       <li><a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">python-chess under GPLv3</a></li>
@@ -61,6 +60,7 @@
       <li><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Bootstrap under MIT</a></li>
       <li><a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">jQuery under MIT</a></li>
       <li><a href="http://flask.pocoo.org/docs/0.10/license/">Flask under BSD</a></li>
+      <li><a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">htmlmin under BSD</a></li>
       <li><a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Tornado under the Apache License Version 2.0</a></li>
     </ul>
   </section>
