--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -70,8 +70,10 @@
   </section>
 
   <section id="download">
-    <h2>Getting local tablebase files</h2>
+    <h2>Download</h2>
 
-    <a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases via BitTorrent</a> or <a href="http://kirill-kryukov.com/chess/tablebases-online/">via eMule</a> or <a href="http://tablebase.sesse.net/syzygy/">via HTTP</a> (combined size about 150GB) with a fast internet connection.
+    <p>If you want to use tablebase information in a chess engine you certainly need your own local tablebase files.</p>
+
+    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases via BitTorrent</a> or <a href="http://kirill-kryukov.com/chess/tablebases-online/">via eMule</a> or <a href="http://tablebase.sesse.net/syzygy/">via HTTP</a> (combined size about 150GB) with a fast internet connection.</p>
   </section>
 {% endblock %}
