Link to related projects

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -51,17 +51,17 @@
   <section id="thanks">
     <h2>Software licenses</h2>
 
-    <p>The code for the website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
+    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the GPLv3</a>. It also uses the following software:</p>
 
     <ul>
-      <li><a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">python-chess under GPLv3</a></li>
-      <li><a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">chessboard.js under MIT</a></li>
-      <li><a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">chess.js under MIT</a></li>
-      <li><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Bootstrap under MIT</a></li>
-      <li><a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">jQuery under MIT</a></li>
-      <li><a href="http://flask.pocoo.org/docs/0.10/license/">Flask under BSD</a></li>
-      <li><a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">htmlmin under BSD</a></li>
-      <li><a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Tornado under the Apache License Version 2.0</a></li>
+      <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPLv3</a>)</li>
+      <li><a href="http://chessboardjs.com/">chessboard.js</a> (<a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="http://getbootstrap.com/">Bootstrap</a> (<a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="https://jquery.com/">jQuery</a> (<a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">MIT</a>)</li>
+      <li><a href="http://flask.pocoo.org/">Flask</a> (<a href="http://flask.pocoo.org/docs/0.10/license/">BSD</a>)</li>
+      <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
+      <li><a href="http://www.tornadoweb.org/en/stable/">Tornado</a> (<a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Apache License Version 2.0</a>)</li>
     </ul>
   </section>
 {% endblock %}
