Document HTTP support for the API

--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -57,6 +57,11 @@
     <p>There is an optional <code>callback</code> argument for the <a href="#json">normal JSON endpoint</a>.</p>
   </section>
 
+  <section id="http">
+    <h2>HTTP</h2>
+    <p>HSTS is enabled for the entire site. However for clients that do not support TLS the API endpoint is also available via HTTP.</p>
+  </section>
+
   <section id="ordering">
     <h2>Ordering moves</h2>
 
