Avoid zeroing moves when losing

--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -71,7 +71,7 @@
     <p>If the move is <strong>a capture or pawn move</strong> and maintains a winning position (DTZ of opponent &lt; 0) play it.</p>
     <p>If the move is <strong>winning</strong> (DTZ of opponent &lt; 0) play it.</p>
     <p>If the move is a <strong>stalemate or draw by insufficient material or a draw</strong> (DTZ 0) play it.</p>
-    <p>A <strong>losing</strong> move is forced. Maximize the DTZ of your opponent.</p>
+    <p>A <strong>losing</strong> move is forced. Avoid zeroing moves. Maximize the DTZ of your opponent.</p>
   </section>
 
   <section id="download">
