Show powered by at all times

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,14 +157,15 @@ footer > .inner {
 }
 
 @media(min-width: 600px) and (max-height: 730px) {
-  footer {
-    display: none;
-    visibility: hidden;
+  footer > .inner {
+    position: relative;
+    width: 240px;
+    margin-left: 360px;
   }
 }
 
 @media(min-width: 600px) and (max-height: 630px) {
-  h1, footer, .fork-me {
+  h1, .fork-me {
     display: none;
     visibility: hidden;
   }
@@ -175,7 +176,7 @@ footer > .inner {
 }
 
 @media(min-width: 600px) and (max-height: 540px) {
-  h1, footer, .fork-me, #board-toolbar {
+  h1, .fork-me, #board-toolbar {
     display: none;
     visibility: hidden;
   }
