--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,11 @@
 
   <div id="winning" class="list-group {{ turn }}-turn">
     {% for move in winning_moves %}
-      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+        {{ move.san }}
+        {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+        <span class="badge">{{ move.badge }}</span>
+      </a>
     {% endfor %}
   </div>
 
@@ -113,7 +117,11 @@
 
   <div id="losing" class="list-group {{ turn }}-turn">
     {% for move in losing_moves %}
-      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+        {{ move.san }}
+        {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+        <span class="badge">{{ move.badge }}</span>
+      </a>
     {% endfor %}
   </div>
 {% endblock %}
