--- a/templates/legal.html
+++ b/templates/legal.html
@@ -61,7 +61,8 @@
       <li><a href="https://jquery.com/">jQuery</a> (<a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">MIT</a>)</li>
       <li><a href="http://flask.pocoo.org/">Flask</a> (<a href="http://flask.pocoo.org/docs/0.10/license/">BSD</a>)</li>
       <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
-      <li><a href="http://www.tornadoweb.org/en/stable/">Tornado</a> (<a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Apache License Version 2.0</a>)</li>
+      <li><a href="http://www.tornadoweb.org/en/stable/">Tornado</a> (<a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Apache License Version&nbsp;2.0</a>)</li>
+      <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
     </ul>
   </section>
 {% endblock %}
