--- a/static/css/style.css
+++ b/static/css/style.css
@@ -178,6 +178,17 @@ footer > .inner {
   }
 }
 
+@media(min-width: 640px) and (max-height: 360px) {
+  #side-to-move, #form-set-fen, .spare-pieces-7492f {
+    display: none;
+    visibility: hidden;
+  }
+
+  #board {
+    margin: 0;
+  }
+}
+
 /* Loading spinner */
 
 .spinner {
