--- a/templates/index.html
+++ b/templates/index.html
@@ -57,46 +57,25 @@
   <h2 id="status"{% if winning_side %} class="{{ winning_side }}-win"{% endif %}>{{ status }}</h2>
 
   <div id="info">
-    {% if fen == DEFAULT_FEN %}
-      <p>Syzygy tablebases provide win-draw-loss and distance-to-zero information
-        for all endgame positions with up to 6 pieces.</p>
-      <p>This means they will not always find the shortest way to checkmate.
-        Instead they allow you to make progress (pawn moves or captures)
-        keeping your win or draw in hand. Unlike the shortest way to mate this
-        accounts for the fifty-move drawing rule.</p>
-      <p><strong>Setup a position on the board to probe the tablebases.</strong></p>
-
-      <p>Sample positions:</p>
-
-      <ul>
-        <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
-        <li><a href="/?fen=4r3/1K6/8/8/5p2/3k4/8/7Q%20b%20-%20-%200%201">Black is just about saved by the fifty-move rule in this KQvKRP endgame</a></li>
-      </ul>
-
-      <section id="contact">
-        <h2>Contact</h2>
-
-        <p>Feedback <a href="/legal#contact">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
-      {% elif illegal %}
-        <p>The given position is not a legal chess position.</p>
-      {% elif insufficient_material %}
-        <p><strong>The game is drawn</strong> because with the remaining
-          material no sequence of legal moves can lead to a checkmate.</p>
-      {% elif unknown %}
-        {% if not_yet_solved %}
-          <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
-            yet solved.</a></p>
-        {% endif %}
-        <p>Syzygy tables only provide information for positions with up to 6 pieces and
-          no castling rights.</p>
-      {% elif blessed_loss %}
-        <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
-          draw can be achieved under the fifty-move rule.</p>
-      {% elif cursed_win %}
-        <p><strong>This is a cursed win.</strong> Mate can be forced, but a
-          draw can be achieved under the fifty-move rule.</p>
+    {% if illegal %}
+      <p>The given position is not a legal chess position.</p>
+    {% elif insufficient_material %}
+      <p><strong>The game is drawn</strong> because with the remaining
+        material no sequence of legal moves can lead to a checkmate.</p>
+    {% elif unknown %}
+      {% if not_yet_solved %}
+        <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
+          yet solved.</a></p>
       {% endif %}
-    </section>
+      <p>Syzygy tables only provide information for positions with up to 6 pieces and
+        no castling rights.</p>
+    {% elif blessed_loss %}
+      <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
+        draw can be achieved under the fifty-move rule.</p>
+    {% elif cursed_win %}
+      <p><strong>This is a cursed win.</strong> Mate can be forced, but a
+        draw can be achieved under the fifty-move rule.</p>
+    {% endif %}
   </div>
 
   <div id="winning" class="list-group {{ turn }}-turn">
@@ -124,4 +103,32 @@
       </a>
     {% endfor %}
   </div>
+
+  <div id="start-info">
+    {% if fen == DEFAULT_FEN %}
+      <p>Put a position on the board to probe the tablebases.</p>
+      <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
+        <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
+        information for all endgame positions with up to 6 pieces, allowing
+        you to make progress, keeping a win in hand, winning all won positions,
+        bringing all drawn positions over the fifty-move line.</p>
+      <p>This is unlike the shortest way to mate
+        (<abbr title="depth-to-mate">DTM</abbr>), that does not account for the
+        fifty-move drawing rule.</p>
+      <p>Intresting positions:</p>
+
+      <ul>
+        <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
+        <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4%20w%20-%20-%200%201">The longest five piece endgame</a></li>
+        <li><a href="/?fen=4r3/1K6/8/8/5p2/3k4/8/7Q%20b%20-%20-%200%201">Black is just about saved by the fifty-move rule in this KQvKRP endgame</a></li>
+      </ul>
+
+      <section id="contact">
+        <h2>Contact</h2>
+
+        <p>Feedback <a href="/legal#contact">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
+      </section>
+    {% endif %}
+  </div>
+
 {% endblock %}
