Add clear button

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,12 @@
       </div>
 
       <div class="btn-group">
+        <a id="btn-clear-board" href="/" class="btn btn-default" aria-label="Clear board" title="Clear board">
+          <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div class="btn-group">
         <a id="btn-swap-colors" href="/?fen={{ swapped_fen|urlencode }}" class="btn btn-default" title="Swap colors">
           <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
         </a>
