Preserve side to move when clearing board

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="btn-group">
-        <a id="btn-clear-board" href="/" class="btn btn-default" aria-label="Clear board" title="Clear board">
+          <a id="btn-clear-board" href="/?fen={{ clear_fen|urlencode }}" class="btn btn-default" aria-label="Clear board" title="Clear board">
           <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
         </a>
       </div>
