Feature blessed loss underpromotion

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
       <ul>
         <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
         <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4%20w%20-%20-%200%201">The longest five piece endgame</a></li>
-        <li><a href="/?fen=4r3/1K6/8/8/5p2/3k4/8/7Q%20b%20-%20-%200%201">Black is just about saved by the fifty-move rule in this KQvKRP endgame</a></li>
+        <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8%20b%20-%20-%200%201">Black escapes to a blessed loss with an underpromotion</a></li>
       </ul>
 
       <section id="contact">
