Render legal and apidoc

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -17,8 +17,8 @@
     <h2>Contact</h2>
 
     <p>
-      <a href="mailto:niklas.fiekas@tu-clausthal.de">niklas.fiekas@tu-clausthal.de</a>
-      (<a href="https://hkps.pool.sks-keyservers.net/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
+      <a href="mailto:niklas.fiekas@backscattering.de">niklas.fiekas@backscattering.de</a>
+      (<a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
     </p>
   </section>
 
