Update list of software licenses

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -57,12 +57,12 @@
       <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPLv3</a>)</li>
       <li><a href="http://chessboardjs.com/">chessboard.js</a> (<a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">MIT</a>)</li>
       <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
+      <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
+      <li><a href="http://jinja.pocoo.org/">Jinja</a> (<a href="https://github.com/mitsuhiko/jinja2/blob/master/LICENSE">BSD</a>)</li>
+      <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
       <li><a href="http://getbootstrap.com/">Bootstrap</a> (<a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">MIT</a>)</li>
       <li><a href="https://jquery.com/">jQuery</a> (<a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">MIT</a>)</li>
-      <li><a href="http://flask.pocoo.org/">Flask</a> (<a href="http://flask.pocoo.org/docs/0.10/license/">BSD</a>)</li>
-      <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
-      <li><a href="http://www.tornadoweb.org/en/stable/">Tornado</a> (<a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Apache License Version&nbsp;2.0</a>)</li>
-      <li><a href="https://github.com/michiguel/Gaviota-Tablebases">Gaviota tablebases</a> (<a href="https://github.com/michiguel/Gaviota-Tablebases/blob/master/license.txt">MIT</a>)</li>
     </ul>
   </section>
 {% endblock %}
