--- a/templates/index.html
+++ b/templates/index.html
@@ -60,81 +60,5 @@
 {% endblock %}
 
 {% block rightside %}
-  <h2 id="status"{% if winning_side %} class="{{ winning_side }}-win"{% endif %}>{{ status }}</h2>
-
-  <div id="info">
-    {% if illegal %}
-      <p>The given position is not a legal chess position.</p>
-    {% elif insufficient_material %}
-      <p><strong>The game is drawn</strong> because with the remaining
-        material no sequence of legal moves can lead to a checkmate.</p>
-    {% elif unknown %}
-      {% if not_yet_solved %}
-        <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
-          yet solved.</a></p>
-      {% endif %}
-      <p>Syzygy tables only provide information for positions with up to 6 pieces and
-        no castling rights.</p>
-    {% elif blessed_loss %}
-      <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
-        draw can be achieved under the fifty-move rule.</p>
-    {% elif cursed_win %}
-      <p><strong>This is a cursed win.</strong> Mate can be forced, but a
-        draw can be achieved under the fifty-move rule.</p>
-    {% endif %}
-  </div>
-
-  <div id="winning" class="list-group {{ turn }}-turn">
-    {% for move in winning_moves %}
-      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-        {{ move.san }}
-        {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-        <span class="badge">{{ move.badge }}</span>
-      </a>
-    {% endfor %}
-  </div>
-
-  <div id="drawing" class="list-group">
-    {% for move in drawing_moves %}
-      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
-    {% endfor %}
-  </div>
-
-  <div id="losing" class="list-group {{ turn }}-turn">
-    {% for move in losing_moves %}
-      <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
-        {{ move.san }}
-        {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
-        <span class="badge">{{ move.badge }}</span>
-      </a>
-    {% endfor %}
-  </div>
-
-  <div id="start-info">
-    {% if fen == DEFAULT_FEN %}
-      <p>Put a position on the board to probe the tablebases.</p>
-      <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
-        <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
-        information for all endgame positions with up to 6 pieces, allowing
-        you to make progress, keeping a win in hand, winning all won positions,
-        bringing all drawn positions over the fifty-move line.</p>
-      <p>This is unlike the shortest way to mate
-        (<abbr title="depth-to-mate">DTM</abbr>), that does not account for the
-        fifty-move drawing rule.</p>
-      <p>Intresting positions:</p>
-
-      <ul>
-        <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
-        <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4%20w%20-%20-%200%201">The longest five piece endgame</a></li>
-        <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8%20b%20-%20-%200%201">Black escapes to a blessed loss with an underpromotion</a></li>
-      </ul>
-
-      <section id="contact">
-        <h2>Contact</h2>
-
-        <p>Feedback <a href="/legal#contact">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
-      </section>
-    {% endif %}
-  </div>
-
+  {% include 'probe.html' %}
 {% endblock %}
