--- a/templates/probe.html
+++ b/templates/probe.html
@@ -1,29 +1,17 @@
 <h2 id="status"{% if winning_side %} class="{{ winning_side }}-win"{% endif %}>{{ status }}</h2>
 
-<div id="info">
-{% if illegal %}
-  <p>The given position is not a legal chess position.</p>
-{% elif insufficient_material %}
-  <p><strong>The game is drawn</strong> because with the remaining
-    material no sequence of legal moves can lead to a checkmate.</p>
-{% elif unknown %}
-  {% if not_yet_solved %}
-    <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
-      yet solved.</a></p>
-  {% endif %}
-  <p>Syzygy tables only provide information for positions with up to 6 pieces and
-    no castling rights.</p>
-{% elif blessed_loss %}
-  <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
-    draw can be achieved under the fifty-move rule.</p>
-{% elif cursed_win %}
-  <p><strong>This is a cursed win.</strong> Mate can be forced, but a
-    draw can be achieved under the fifty-move rule.</p>
-{% endif %}
-</div>
-
 <div id="winning" class="list-group {{ turn }}-turn">
 {% for move in winning_moves %}
+  <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+    {{ move.san }}
+    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+    <span class="badge">{{ move.badge }}</span>
+  </a>
+{% endfor %}
+</div>
+
+<div id="cursed" class="list-group {{ turn }}-turn">
+{% for move in cursed_moves %}
   <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
     {{ move.san }}
     {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
@@ -38,6 +26,22 @@
 {% endfor %}
 </div>
 
+<div id="unknown" class="list-group">
+{% for move in unknown_moves %}
+  <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+{% endfor %}
+</div>
+
+<div id="blessed" class="list-group {{ turn }}-turn">
+{% for move in blessed_moves %}
+  <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
+    {{ move.san }}
+    {% if move.dtm %} <span class="badge">DTM {{ move.dtm }}</span>{% endif %}
+    <span class="badge">{{ move.badge }}</span>
+  </a>
+{% endfor %}
+</div>
+
 <div id="losing" class="list-group {{ turn }}-turn">
 {% for move in losing_moves %}
   <a class="list-group-item" href="/?fen={{ move.fen|urlencode }}" data-uci="{{ move.uci }}" data-fen="{{ move.fen }}">
@@ -48,8 +52,31 @@
 {% endfor %}
 </div>
 
-<div id="start-info">
+
+<div id="info">
+{% if illegal %}
+  <p>The given position is not a legal chess position.</p>
+{% elif insufficient_material %}
+  <p><strong>The game is drawn</strong> because with the remaining
+    material no sequence of legal moves can lead to a checkmate.</p>
+{% elif unknown %}
+  {% if fen == STARTING_FEN %}
+    <p><a href="https://en.wikipedia.org/wiki/Solving_chess">Chess is not
+      yet solved.</a></p>
+  {% endif %}
+  <p>Syzygy tables only provide information for positions with up to 6 pieces and
+    no castling rights.</p>
+{% elif blessed_loss %}
+  <p><strong>This is a blessed loss.</strong> Mate can be forced, but a
+    draw can be achieved under the fifty-move rule.</p>
+{% elif cursed_win %}
+  <p><strong>This is a cursed win.</strong> Mate can be forced, but a
+    draw can be achieved under the fifty-move rule.</p>
+{% endif %}
+</div>
+
 {% if fen == DEFAULT_FEN %}
+<div id="start-info">
   <p>Put a position on the board to probe the tablebases.</p>
   <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
     <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
@@ -72,5 +99,5 @@
 
     <p>Feedback <a href="/legal#contact">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
   </section>
-{% endif %}
 </div>
+{% endif %}
