--- a/templates/probe.html
+++ b/templates/probe.html
@@ -77,22 +77,26 @@
 
 {% if fen == DEFAULT_FEN %}
 <div id="start-info">
-  <p>Put a position on the board to probe the tablebases.</p>
-  <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
-    <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
-    information for all endgame positions with up to 6 pieces, allowing
-    you to make progress, keeping a win in hand, winning all won positions,
-    bringing all drawn positions over the fifty-move line.</p>
-  <p>This is unlike the shortest way to mate
-    (<abbr title="depth-to-mate">DTM</abbr>), that does not account for the
-    fifty-move drawing rule.</p>
-  <p>Intresting positions:</p>
+  <section id="syzygy">
+    <h2>Syzygy tablebases</h2>
 
-  <ul>
-    <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
-    <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4%20w%20-%20-%200%201">The longest five piece endgame</a></li>
-    <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8%20b%20-%20-%200%201">Black escapes to a blessed loss with an underpromotion</a></li>
-  </ul>
+    <p>Put a position on the board to probe the tablebases.</p>
+    <p>Syzygy tablebases provide <abbr title="win-draw-loss">WDL</abbr> and
+      <abbr title="distance-to-zero (a capture or pawn move)">DTZ</abbr>
+      information for all endgame positions with up to 6 pieces, allowing
+      you to make progress, keeping a win in hand, winning all won positions,
+      bringing all drawn positions over the fifty-move line.</p>
+    <p>This is unlike the shortest way to mate
+      (<abbr title="depth-to-mate">DTM</abbr>), that does not account for the
+      fifty-move drawing rule.</p>
+    <p>Intresting positions:</p>
+
+    <ul>
+      <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
+      <li><a href="/?fen=8/8/8/8/1p2P3/4P3/1k6/3K4%20w%20-%20-%200%201">The longest five piece endgame</a></li>
+      <li><a href="/?fen=8/6B1/8/8/B7/8/K1pk4/8%20b%20-%20-%200%201">Black escapes to a blessed loss with an underpromotion</a></li>
+    </ul>
+  </section>
 
   <section id="contact">
     <h2>Contact</h2>
