Determine DTZ optimal moves

--- a/templates/probe.html
+++ b/templates/probe.html
@@ -75,6 +75,8 @@
 {% endif %}
 </div>
 
+<a href="/api/syzygy-vs-syzygy.pgn?fen={{ fen|urlencode }}">syzygy-vs-syzygy.pgn</a>
+
 {% if fen == DEFAULT_FEN %}
 <div id="start-info">
   <section id="syzygy">
