--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,10 @@
     <link rel="sitemap" href="/sitemap.txt" type="text/plain">
   </head>
   <body>
+    {% if development %}
+      <div id="development">Careful, this is an unreliable development version.</div>
+    {% endif %}
+
     <div class="content">
       <div class="left-side">
         <div class="inner">
@@ -35,8 +39,8 @@
       </footer>
     </div>
 
-    {%block forkme %}
+    {% block forkme %}
       <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.info"><img style="position: fixed; top: 0; right: 0; border: 0;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
-    {%endblock%}
+    {% endblock %}
   </body>
 </html>
