--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
     </div>
 
     {% block forkme %}
-      <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.info"><img style="position: fixed; top: 0; right: 0; border: 0;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
+      <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.info"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 2;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
     {% endblock %}
   </body>
 </html>
