--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 
   <nav>
     <div id="side-to-move" class="btn-group" role="group" aria-label="Side to move">
-      <a id="btn-white" class="btn btn-default{% if turn == "white" %} active{% endif %}" href="/?fen={{ white_fen|urlencode }}">White to move</a>
-      <a id="btn-black" class="btn btn-default{% if turn == "black" %} active{% endif %}" href="/?fen={{ black_fen|urlencode }}">Black to move</a>
+      <a id="btn-white" class="btn btn-default{% if turn == "white" %} active{% endif %}" href="/?fen={{ white_fen|replace(" ", "_") }}">White to move</a>
+      <a id="btn-black" class="btn btn-default{% if turn == "black" %} active{% endif %}" href="/?fen={{ black_fen|replace(" ", "_") }}">Black to move</a>
     </div>
 
     <div id="board" data-fen="{{ fen }}">
@@ -30,19 +30,19 @@
       </div>
 
       <div class="btn-group">
-          <a id="btn-clear-board" href="/?fen={{ clear_fen|urlencode }}" class="btn btn-default" aria-label="Clear board" title="Clear board">
+          <a id="btn-clear-board" href="/?fen={{ clear_fen|replace(" ", "_") }}" class="btn btn-default" aria-label="Clear board" title="Clear board">
           <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
         </a>
       </div>
 
       <div class="btn-group">
-        <a id="btn-swap-colors" href="/?fen={{ swapped_fen|urlencode }}" class="btn btn-default" title="Swap colors">
+        <a id="btn-swap-colors" href="/?fen={{ swapped_fen|replace(" ", "_") }}" class="btn btn-default" title="Swap colors">
           <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
         </a>
-        <a id="btn-mirror-horizontal" href="/?fen={{ horizontal_fen|urlencode }}" class="btn btn-default" title="Mirror horizontally">
+        <a id="btn-mirror-horizontal" href="/?fen={{ horizontal_fen|replace(" ", "_") }}" class="btn btn-default" title="Mirror horizontally">
           <span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span>
         </a>
-        <a id="btn-mirror-vertical" href="/?fen={{ vertical_fen|urlencode }}" class="btn btn-default" title="Mirror vertically">
+        <a id="btn-mirror-vertical" href="/?fen={{ vertical_fen|replace(" ", "_") }}" class="btn btn-default" title="Mirror vertically">
           <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
         </a>
       </div>
