--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="Syzygy,chess,endgame,tablebase">
     <meta name="author" content="Niklas Fiekas">
     <link rel="author" title="Legal" href="/legal">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <link rel="sitemap" href="/sitemap.txt" type="text/plain">
   </head>
   <body>
