--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -59,8 +59,8 @@
   </section>
 
   <section id="http">
-    <h2>HTTP without TLS</h2>
-    <p>HSTS is enabled for the entire site. However for clients that do not support TLS the API endpoint is also available via HTTP.</p>
+    <h2>Plain HTTP</h2>
+    <p>HSTS is enabled for the entire site. However for clients that do not support TLS the API endpoint is also available via plain HTTP.</p>
   </section>
 
   <section id="download">
