--- a/templates/legal.html
+++ b/templates/legal.html
@@ -18,7 +18,7 @@
 
     <p>
       <a href="mailto:niklas.fiekas@backscattering.de">niklas.fiekas@backscattering.de</a>
-      (<a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
+      (<a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">pgp</a>)
     </p>
   </section>
 
@@ -26,7 +26,7 @@
     <h2>Imprint</h2>
 
     <p>Niklas Fiekas
-      <br>Reichenberger Straße 3
+      <br>Tannenhöhe 16
       <br>38678 Clausthal-Zellerfeld
       <br>Germany
     </p>
@@ -51,7 +51,7 @@
   <section id="thanks">
     <h2>Software licenses</h2>
 
-    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the GPLv3</a>. It also uses the following software:</p>
+    <p>The <a href="https://github.com/niklasf/syzygy-tables.info">code for the website itself</a> is <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">licensed under the AGPLv3</a>. It also uses the following software:</p>
 
     <ul>
       <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPLv3</a>)</li>
